--- a/layouts/partials/portfolio/skills.html
+++ b/layouts/partials/portfolio/skills.html
@@ -17,7 +17,7 @@
                     </li>
                 {{ else }}
                   <li class="list-inline-item">
-                    <i class="devicons devicons-{{ cond (in $.Site.Data.devicons (lower .)) (lower .) "terminal_badge" }}"></i>
+                    <i class="devicon-{{ cond (in $.Site.Data.devicons (lower .)) (lower .) "terminal_badge" }}-plain"></i>
                     {{ . }}
                   </li>
                 {{ end }}
