--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -21,16 +21,19 @@
         </div>
         <div>
           {{ .Content }}
-          <h3>Certifications</h3>
-          <ul class="list-inline list-social-icons mb-0">
-            {{ range .Site.Data.certifications }}
-                <li class="list-inline-item">
-                  <a href="{{ .proof }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me">
-                    <img src="{{ .badge }}" width=75 />
-                  </a>
-                </li>
-            {{ end }}
-          </ul>
+          {{ if .Site.Params.showCertifications }}
+            <h3>Certifications</h3>
+            <ul class="list-inline list-social-icons mb-0">
+              {{ range .Site.Data.certifications }}
+                  <li class="list-inline-item">
+                    <a href="{{ .proof }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me">
+                      <img src="{{ .badge }}" width=75 />
+                    </a>
+                  </li>
+              {{ end }}
+            </ul>
+          {{ end }}
+          {{ if .Site.Params.showSocialization }}
           <h3>Socialization</h3>
           <ul class="list-inline list-social-icons mb-0">
             {{ range .Site.Params.handles }}
@@ -44,6 +47,7 @@
                 </li>
             {{ end }}
           </ul>
+          {{ end }}
         </div>
       </div>
     </section>
